--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Sasha Khomiak <khomiak@gmail.com>",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
