--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "commander": "^11.0.0",
+    "nanoid": "^4.0.2",
+    "uuid": "^9.0.0",
+    "yargs": "^17.7.2"
   }
 }
