--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "commander": "^11.0.0",
     "nanoid": "^4.0.2",
+    "shortid": "^2.2.16",
     "uuid": "^9.0.0",
     "yargs": "^17.7.2"
   }
